--- a/languages/pgnotex.pot
+++ b/languages/pgnotex.pot
@@ -99,7 +99,7 @@ msgid "Version"
 msgstr ""
 
 #: tfmcopyright.lbcopyrightvers1.caption
-msgid "1.5.0.1"
+msgid "1.5.0.2"
 msgstr ""
 
 #: tfmcopyright.lbok.caption
@@ -665,6 +665,10 @@ msgstr ""
 #: tfmmain.mitoolsoptions.caption
 msgctxt "tfmmain.mitoolsoptions.caption"
 msgid "Options"
+msgstr ""
+
+#: tfmmain.mitoolsrun.caption
+msgid "Run another instance"
 msgstr ""
 
 #: tfmmain.mitoolsshoweditor.caption
