--- a/languages/pgnotex.it.po
+++ b/languages/pgnotex.it.po
@@ -104,7 +104,7 @@ msgid "Version"
 msgstr "Versione"
 
 #: tfmcopyright.lbcopyrightvers1.caption
-msgid "1.5.0.1"
+msgid "1.5.0.2"
 msgstr ""
 
 #: tfmcopyright.lbok.caption
@@ -681,6 +681,10 @@ msgstr "Schermo intero"
 msgctxt "tfmmain.mitoolsoptions.caption"
 msgid "Options"
 msgstr "Opzioni"
+
+#: tfmmain.mitoolsrun.caption
+msgid "Run another instance"
+msgstr "Esegui un'altra istanza"
 
 #: tfmmain.mitoolsshoweditor.caption
 msgid "Show editor only"
